Replaced Button with KeyDown

--- a/app/src/main/res/layout/fragment_visual.xml
+++ b/app/src/main/res/layout/fragment_visual.xml
@@ -6,25 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.VisualAssistanceFragment">
 
-    <Button
-        android:id="@+id/btn_takepicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:text="@string/take_picture"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextureView
         android:id="@+id/texture"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_above="@+id/btn_takepicture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        app:layout_constraintBottom_toTopOf="@+id/btn_takepicture"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
